--- a/_sass/mobile_nav.scss
+++ b/_sass/mobile_nav.scss
@@ -7,6 +7,7 @@ $menu-text-color: #fff;
 .mobile-menu {
   display: none;
   margin-right: 1rem;
+  font-size: 1rem;
 }
 
 .mobile-menu > input {
