--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -7,12 +7,6 @@ $wired-font-family: "Open Sans", "Avenir Next", Avenir, "Segoe UI",
   @return repeat(auto-fit, minmax($min-size, 1fr));
 }
 
-$breakpoints: (
-  phone: 480px,
-  tablet: 768px,
-  desktop: 1024px,
-) !default;
-
 @mixin media-max-sm {
   @media (max-width: 480px) {
     @content;
@@ -21,6 +15,12 @@ $breakpoints: (
 
 @mixin media-max-md {
   @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin media-max-lg {
+  @media (max-width: 900px) {
     @content;
   }
 }
